# ChanChan

./: .gitignore  GITHUB_SETUP.md  LICENSE  README.md  __init__.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: CONTRIBUTING.md
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml  q-and-a.yml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: README.md  test-light.yml  test.yml
benchmarks/: benchmark.py
src/: __init__.py  actors.py  config.py  core.py  logger.py
tests/: __init__.py  test_chan.py
